tests/tooling/fixtures/native/recovery/negative/negative_loop_break_outside.objc3
module NegativeLoopBreakOutside;
// Expected diagnostic code(s): O3S212.

fn main() -> i32 {
  break;
  return 0;
}
